Adding sidebar (html)

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
 		<title>Beadandó</title>
 	</head>
 	<body>
+		<div class="sidenav">
+			<a href="#">HETILAP</a>
+			<a href="#">ONLINE</a>
+			<a href="#">HETILAP+ONLINE</a>
+			<a href="#">DEMÓ</a>
+			<a href="#">CÍMKÉZŐ</a>
+			<a href="#">TANÍTÓ</a>
+		</div>
+		<div class="main">
+		
+		<div>
 		
 	</body>
 </html>
