Linking CSS file, adding "enlarged" class

--- a/index.html
+++ b/index.html
@@ -3,13 +3,15 @@
 	<head>
 		<meta charset="UTF-8" />
 		<title>Beadandó</title>
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
 		<div class="sidenav">
+			<a class="enlarged" href="#">MODELLEK</a>
 			<a href="#">HETILAP</a>
 			<a href="#">ONLINE</a>
 			<a href="#">HETILAP+ONLINE</a>
-			<a href="#">DEMÓ</a>
+			<a class="enlarged" href="#">DEMÓ</a>
 			<a href="#">CÍMKÉZŐ</a>
 			<a href="#">TANÍTÓ</a>
 		</div>
