--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
 <html lang="hu">
 	<head>
 		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>Beadandó</title>
 		<link rel="stylesheet" href="style.css" />
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+		<script src="https://kit.fontawesome.com/5d08bcc2c3.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
-		<div class="sidenav">
-			<a class="enlarged" href="#">MODELLEK</a>
-			<a href="#">HETILAP</a>
-			<a href="#">ONLINE</a>
-			<a href="#">HETILAP+ONLINE</a>
-			<a class="enlarged" href="#">DEMÓ</a>
-			<a href="#">CÍMKÉZŐ</a>
-			<a href="#">TANÍTÓ</a>
-		</div>
-		<div class="main">
-		
+		<div class="container-fluid">
+			<div class="sidenav">
+				<h3 class="enlarged"><i class="fas fa-share-alt fa-2x"></i>MODELLEK</h3>
+				<a href="#"><i class="fas fa-newspaper"></i>HETILAP</a>
+				<a href="#"><i class="fas fa-globe-americas"></i>ONLINE</a>
+				<a href="#"><i class="fas fa-link"></i>HETILAP+ONLINE</a>
+				<a class="enlarged" href="#"><i class="fas fa-tags fa-2x"></i>DEMÓ</a>
+				<a href="#"><i class="fas fa-user-tag"></i>CÍMKÉZŐ</a>
+				<a href="#"><i class="fas fa-cogs"></i>TANÍTÓ</a>
+			</div>
+			<div class="main">
+			
+			<div>
 		<div>
-		
 	</body>
 </html>
