Making sidenav functional
-Changed structure of HTML
- Added javascript
- Changed and finalized the style of sidenav

--- a/index.html
+++ b/index.html
@@ -10,18 +10,25 @@
 	</head>
 	<body>
 		<div class="container-fluid">
-			<div class="sidenav">
+			<div id="sidenav">
 				<h3 class="enlarged"><i class="fas fa-share-alt fa-2x"></i>MODELLEK</h3>
-				<a href="#"><i class="fas fa-newspaper"></i>HETILAP</a>
-				<a href="#"><i class="fas fa-globe-americas"></i>ONLINE</a>
-				<a href="#"><i class="fas fa-link"></i>HETILAP+ONLINE</a>
-				<a class="enlarged" href="#"><i class="fas fa-tags fa-2x"></i>DEMÓ</a>
-				<a href="#"><i class="fas fa-user-tag"></i>CÍMKÉZŐ</a>
-				<a href="#"><i class="fas fa-cogs"></i>TANÍTÓ</a>
+				<nav>
+					<a href="#"><i class="fas fa-newspaper"></i>HETILAP</a>
+					<a href="#"><i class="fas fa-globe-americas"></i>ONLINE</a>
+					<a href="#"><i class="fas fa-link"></i>HETILAP+ONLINE</a>
+					<a class="enlarged" href="#"><i class="fas fa-tags fa-2x"></i>DEMÓ</a>
+					<a href="#"><i class="fas fa-user-tag"></i>CÍMKÉZŐ</a>
+					<a href="#"><i class="fas fa-cogs"></i>TANÍTÓ</a>
+				</nav>
+				<button id="collapseBtn" type="button">
+					<i id="angle" class="fas fa-angle-left"></i>
+				</button>
 			</div>
 			<div class="main">
 			
 			<div>
 		<div>
+		
 	</body>
+	<script src="javascript.js"></script>
 </html>
