Fill cards with content

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 							<select id="headline" class="form-control"></select>
 							<button id="btn_back_20" type="button" class="btn btn-secondary"><i class="fas fa-angle-double-left"></i></button>
 							<button id="btn_back" type="button" class="btn btn-secondary"><i class="fas fa-angle-left"></i></button>
-							<button id="btn_next" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-angle-right"></i></button>
-							<button id="btn_next_20" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-angle-double-right"></i></button>
+							<button id="btn_forward" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-angle-right"></i></button>
+							<button id="btn_forward_20" type="button" class="btn btn-secondary btn-sm"><i class="fas fa-angle-double-right"></i></button>
 						</div>
 					</div>
 					<div class="form-group">
@@ -60,6 +60,70 @@
 							</div>
 						</div>
 					</div>
+					
+					<div class="row">
+						<div class="col-sm-6">
+							<div class="card">
+								<div class="card-header blue">
+									Cikk szövege
+								</div>
+								<div class="card-body">
+								<p id="story"></p>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div>
+								<div class="card">
+									<div class="card-header blue">
+										Eredeti címkék
+									</div>
+									<div class="card-body">
+										<ul id="orgLabels" class="list-unstyled"> </ul>
+									</div>
+								</div>
+							</div>
+							<br>
+							<div>
+								<div class="card">
+									<div class="card-header blue">
+										Eredeti címkék (egyéb)
+									</div>
+									<div class="card-body">
+										<ul id="orgLabelsSpec" class="list-unstyled"> </ul>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-3">
+							<div>
+								<div class="card">
+									<div class="card-header blue">
+										Ajánlott címkék
+									</div>
+									<div class="card-body">
+										<ul id="recLabels" class="list-unstyled"> </ul>
+									</div>
+								</div>
+							</div>
+							<br>
+							<div>
+								<div class="card">
+									<div class="card-header blue">
+										Ajánlott címkék (egyéb)
+									</div>
+									<div class="card-body">
+										<ul id="recLabelsSpec" class="list-unstyled"> </ul>
+									</div>
+								</div>
+							</div>
+						<div>
+					</div>
+					<br>
+					<div class="row">
+						
+					</div>
+
 				</form>
 			</div>
 		</div>
