--- a/index.html
+++ b/index.html
@@ -60,71 +60,69 @@
 							</div>
 						</div>
 					</div>
-					
-					<div class="row">
-						<div class="col-sm-6">
+				</form>
+				<div class="row">
+					<div class="col-sm-6">
+						<div class="card">
+							<div class="card-header blue">
+								Cikk szövege
+							</div>
+							<div class="card-body">
+							<p id="story"></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-3">
+						<div>
 							<div class="card">
 								<div class="card-header blue">
-									Cikk szövege
+									Eredeti címkék
 								</div>
 								<div class="card-body">
-								<p id="story"></p>
+									<ul id="orgLabels" class="list-unstyled"> </ul>
 								</div>
 							</div>
 						</div>
-						<div class="col-sm-3">
-							<div>
-								<div class="card">
-									<div class="card-header blue">
-										Eredeti címkék
-									</div>
-									<div class="card-body">
-										<ul id="orgLabels" class="list-unstyled"> </ul>
-									</div>
-								</div>
-							</div>
-							<br>
-							<div>
-								<div class="card">
-									<div class="card-header blue">
-										Eredeti címkék (egyéb)
-									</div>
-									<div class="card-body">
-										<ul id="orgLabelsSpec" class="list-unstyled"> </ul>
-									</div>
-								</div>
-							</div>
-						</div>
-						<div class="col-sm-3">
-							<div>
-								<div class="card">
-									<div class="card-header blue">
-										Ajánlott címkék
-									</div>
-									<div class="card-body">
-										<ul id="recLabels" class="list-unstyled"> </ul>
-									</div>
-								</div>
-							</div>
-							<br>
-							<div>
-								<div class="card">
-									<div class="card-header blue">
-										Ajánlott címkék (egyéb)
-									</div>
-									<div class="card-body">
-										<ul id="recLabelsSpec" class="list-unstyled"> </ul>
-									</div>
-								</div>
-							</div>
+						<br>
 						<div>
+							<div class="card">
+								<div class="card-header blue">
+									Eredeti címkék (egyéb)
+								</div>
+								<div class="card-body">
+									<ul id="orgLabelsSpec" class="list-unstyled"> </ul>
+								</div>
+							</div>
+						</div>
 					</div>
-					<br>
-					<div class="row">
-						
+					<div class="col-sm-3">
+						<div>
+							<div class="card">
+								<div class="card-header blue">
+									Ajánlott címkék
+								</div>
+								<div class="card-body">
+									<ul id="recLabels" class="list-unstyled"> </ul>
+								</div>
+							</div>
+						</div>
+						<br>
+						<div>
+							<div class="card">
+								<div class="card-header blue">
+									Ajánlott címkék (egyéb)
+								</div>
+								<div class="card-body">
+									<ul id="recLabelsSpec" class="list-unstyled"> </ul>
+								</div>
+							</div>
+						</div>
 					</div>
-
-				</form>
+				</div>
+				<br>
+				<footer>
+					PROJEKT 2019
+				</footer>
 			</div>
 		</div>
 	</body>
